--- a/index.html
+++ b/index.html
@@ -1332,18 +1332,22 @@
             <h3>Software Engineer</h3>
             <h4>Ridmik Labs Limited, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
 
+
+          </div>
+
+          <div class="col-12">
             <h4>Boitoi Android Application</h4>
 
-            <p>A secure native android eBook reader with digital library.</p>
+            <p>Boitoi is a secure native android eBook reader with digital library.</p>
 
             <ul>
-              <li>Worked in the complete development lifecycle of the application with successful launching and working on continuous updating.</li>
+              <li>Worked in the complete development lifecycle of the application with successful launching and is working on continuous updating.</li>
               <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user.</li>
             </ul>
 
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
 
-            <p>&nbsp;</p>
+          </div>
 
 
           </div>
